panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__typedef__test_error_redeclaration_of_typedef_with_function_definition_in_same_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_definition_in_same_scope.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `typedef` name `a` redeclared as function name
   ╭─[panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_definition_in_same_scope.c:3:5]
   │
 1 │ typedef int a;
   │ ─────┬─────  
   │      ╰─────── originally declared here as a `typedef` name
   │ 
 3 │ int a() {}
   │     ┬  
   │     ╰── redeclared here as a function name
───╯
