panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__typedef__test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: declaration does not specify a name
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function.c:6:9]
   │
 6 │         int (name, ...);
   │         ────────┬───────  
   │                 ╰───────── this looks like a declaration with type `fn(∅: typedef<name>, ...) -> int`
───╯

Error: declaration does not specify a name
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function.c:7:9]
   │
 7 │         int (name, name);
   │         ────────┬────────  
   │                 ╰────────── this looks like a declaration with type `fn(∅: typedef<name>, ∅: typedef<name>) -> int`
───╯

Error: declaration does not specify a name
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function.c:8:9]
   │
 8 │         int (name const);
   │         ────────┬────────  
   │                 ╰────────── this looks like a declaration with type `fn(∅: typedef<name> const) -> int`
───╯

Error: declaration does not specify a name
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function.c:9:9]
   │
 9 │         int (const);
   │         ──────┬─────  
   │               ╰─────── this looks like a declaration with type `fn(∅: int const) -> int`
───╯

Error: declaration does not specify a type
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function.c:9:14]
   │
 9 │         int (const);
   │              ──┬──  
   │                ╰──── type missing
───╯

Error: declaration does not specify a type
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function.c:9:14]
   │
 9 │         int (const);
   │              ──┬──  
   │                ╰──── type missing
───╯

Error: declaration does not specify a name
    ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function.c:10:9]
    │
 10 │         int (int);
    │         ─────┬────  
    │              ╰────── this looks like a declaration with type `fn(∅: int) -> int`
────╯
